<resources>
    <string name="app_name">Theater</string>
    <string name="title_favorite">Favorite</string>
    <string name="image_description">Poster Path</string>
    <string name="original_title">Wrath of Man</string>
    <string name="release_date">2021-04-22</string>
    <string name="vote_average">8.6</string>
    <string name="search">Search movies....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">data not found !</string>
    <string name="loading">Loading..</string>
    <string name="title">Title</string>
    <string name="vote">Vote Average</string>
    <string name="release">Release</string>
    <string name="originalTitle_content">Zack Snyder\'s Justice League</string>
    <string name="overview">Overview</string>
    <string name="rating">Rating Score</string>
    <string name="ratingContent">Vote Average : %s, Vote Count : %s, Popularity : %s</string>
    <string name="overviewContent">Determined to ensure Superman\'s ultimate sacrifice was not in vain, Bruce Wayne aligns forces with Diana Prince with plans to recruit a team of metahumans to protect the world from an approaching threat of catastrophic proportions.</string>
    <string name="play">Play Now</string>
    <string name="detail">Detail</string>
    <string name="movie_show">Show</string>
</resources>